k8s/infrastructure/traefik-config/ingressroute-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Traefik"
    gethomepage.dev/description: "Ingress controller"
    gethomepage.dev/group: "infrastructure"
    gethomepage.dev/icon: "traefik.png"
    gethomepage.dev/href: "https://traefik.item.fyi"
    gethomepage.dev/siteMonitor: "http://traefik-api.traefik-system.svc.cluster.local:9000"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=traefik"
    gethomepage.dev/widget.type: "traefik"
    gethomepage.dev/widget.url: "http://traefik-api.traefik-system.svc.cluster.local:9000"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.item.fyi`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
